--- a/style.css
+++ b/style.css
@@ -3,20 +3,28 @@
 body {
     margin: 0;
     padding: 0;
-    /* min-height: 100vh; */
+    min-height: 100vh;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+    align-items: center;
+    font-family: 'Roboto', sans-serif;
+    color: rgb(223, 223, 223);
+}
+
+h1, 
+p {
+    /* padding: 0;
+    margin: 0; */
 }
 
 .card {
-    height: 100vh;
+    height: 90%;
     max-width: 800px;
-    width: 90%;
+    width: 80%;
     display: grid;
-    grid-template: 250px auto auto auto / 30% auto ;
+    grid-template: 200px 2em auto auto 100px 1em / 1em auto auto 1em;
     text-align: center;
-    background-color: green;
+    background-color: #111d4a;
 }
 
 img {
@@ -28,24 +36,63 @@ img {
 }
 
 h1 {
-    grid-row: 2;
+    grid-row: 3;
     grid-column: 1 / -1;
+    font-size: 1.75rem;
 }
 
 .date {
-    grid-row: 3;
+    grid-row: 4;
     grid-column: 1 / -1;
 }
 
 .time {
-    grid-row: 4;
-    grid-column: 1 / 2;
-    align-self: center;
+    grid-row: 5;
+    grid-column: 2 / 3;
+    align-self: end;
     justify-self: start;
+    margin: 0;
+}
+
+.date,
+.time {
+    font-size: 1.25rem;
+}
+
+span {
+    display: block;
+}
+
+.time-text {
+    font-weight: 900;
 }
 
 button {
-    grid-column: 2;
-    align-self: center;
+    grid-column: 3 / 4;
+    grid-row: 5;
+    align-self: end;
     justify-self: end;
+    background-color: #05cbe9;
+    border: none;
+    padding: .5em .7em;
+    font-family: inherit;
+    font-weight: 900;
+    font-size: 1.25rem;
 }
+
+button:hover,
+button:focus {
+    cursor: pointer;
+    transition: 0.5s;
+    background-color: lightgreen;
+}
+
+a {
+    grid-column: 3 / 4;
+    grid-row: 5;
+    align-self: end;
+    justify-self: end;
+    /* background-color: #05cbe9; */
+    text-decoration: none;
+}
+
