--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* *, *::before, *::after {box-sizing: border-box;} */
+*, *::before, *::after {box-sizing: border-box;}
 
 body {
     margin: 0;
@@ -12,26 +12,41 @@ body {
 }
 
 .card {
-    min-height: 90%;
     max-width: 800px;
-    width: 80%;
+    width: 90%;
     display: grid;
     grid-template: 200px 3em auto auto 150px 1em / 1em 1fr 1fr 1em;
     text-align: center;
     background-color: #111d4a;
 }
 
-img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+div {
+    background-image: url("images/field.jpg");
     grid-row: 1;
     grid-column: 1 / -1;
+    background-size: cover;
+    background-repeat: none;
+}
+
+img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
+
+.first-img {
+    grid-row: 1;
+    grid-column: 1 / 3;
+}
+
+.second-img {
+    grid-row: 1;
+    grid-column: 3 / -1;
 }
 
 h1 {
     grid-row: 3;
-    grid-column: 2 / -1;
+    grid-column: 2 / -2;
     font-size: 1.75rem;
 }
 
@@ -41,7 +56,7 @@ h1 {
 
 .date {
     grid-row: 4;
-    grid-column: 2 / -1;
+    grid-column: 2 / -2;
 }
 
 .time {
@@ -99,29 +114,56 @@ a:active {
 }
 
 @media (min-width: 768px) {
+    div{
+        display: none;
+    }
+
     .card {
-        grid-template: auto auto auto auto / 200px auto 200px;
+        grid-template: 200px auto auto auto / 200px auto 200px;
         min-width: 90vw;
+        min-height: 90vh;
     }
 
     .first-img {
-        grid-template-columns: 1 / 2;
+        grid-column: 1 / 2;
+        grid-row: 1 / -1;
+        background-image: url("images/field.jpg");
+        background-size: cover;
+    }
+
+    .second-img {
+        grid-column: -2 / -1;
+        grid-row: 1 / -1;
+        background-image: url("images/field.jpg");
+        background-size: cover;
+        /* background-position: ; */
     }
 
     h1 {
-        grid-template-columns: 2 / 3;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
     }
 
     .date {
-        grid-template-columns: 2 / 3;
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
     }
 
     .time {
-        grid-template-columns: 2 / 3;
+        grid-column: 2 / 3;
+        grid-row: 3 / 4;
+        justify-self: center;
     }
 
-    a {
-        grid-template-columns: 2 / 3;
+    .time-text {
+        display: inline;
+    }
+
+    a:link,
+    a:visited {
+        grid-column: 2 / 3;
+        grid-row: 4 / 5;
+        justify-self: center;
     }
 }
 
